# natural-sql

./: .env.example  .gitignore  INSTALLATION.md  README.md  install-system-wide.sh  install-user-local.sh  main.py  natural-sql-launcher.sh  pyproject.toml
src/: __init__.py
src/cli/: __init__.py  main.py
src/config/: settings.py
src/database/: __init__.py  connection.py  models.py
src/nlp/: __init__.py  chat_openrouter.py  prompts.py  query_processor.py  vector_knowledge.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_database.py  test_nlp.py
